--- a/basic-syntax/styles.css
+++ b/basic-syntax/styles.css
@@ -13,6 +13,45 @@ p {
 
 /* Class Selectors */
 
-.container{
-    
+.container {
+    font-size: x-small;
+}
+
+/* ID Selectors */
+
+#header {
+    background-color: aliceblue;
+}
+
+/* Grouping Selectors */
+
+.unique-one,
+.unique-two {
+    color:white;
+    background-color: blueviolet;
+}
+
+.unique-one {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 400;
+    font-size: x-small;
+}
+
+.unique-two {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+/* Chaining Selectors */
+
+.subsection.header {
+    color: red
+}
+
+.subsection.preview {
+    color:aqua
+}
+
+.subsection#header {
+    color: brown;
+    background-color: aquamarine;
 }
