--- a/basic-syntax/styles.css
+++ b/basic-syntax/styles.css
@@ -1,8 +1,7 @@
 /* Universal Selector*/
 
 * {
-    color: blue;
-    background-color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* Type Selectors */
@@ -54,4 +53,26 @@ p {
 .subsection#header {
     color: brown;
     background-color: aquamarine;
+}
+
+/* Descendant Combinators (basically only nested elements are selected)*/
+
+.ancestor .child {
+    color:green
+}
+
+/* CSS Properties */
+
+.text-properties {
+    color:#31b080;
+    background-color: rgb(110,0, 127);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 44px;
+    font-weight: 900;
+    text-align: center;
+}
+
+img {
+    height: auto;
+    width: 250px;
 }
